<resources>
    <string name="app_name">Distance Conversion</string>
    <string name="title">Distance Conversion</string>
    <string name="button">Convert</string>
    <string name="calculate">Calculate</string>
    <string name="enter_value_here">Enter value here</string>
    <string name="measurement_system">Measurement System</string>
    <string name="quantity">Quantity</string>
    <string name="input">Input</string>
    <string name="unit">Unit</string>
    <string name="output">Output</string>
    <string name="to">To</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_closed">Closed Navigation Drawer</string>
    <string name="weight">Weight</string>
    <string name="toolkit">Toolkit</string>
    <string name="conversion">Conversion</string>
    <string name="distance">Distance</string>
    <string name="area">Area</string>
    <string name="volume">Volume</string>
    <string name="time">Time</string>
    <string name="currency">Currency</string>
    <string name="temperature">Temperature</string>
    <string name="storage">Storage</string>
    <string name="magnetism">Magnetism</string>
    <string name="radiation">Radiation</string>
    <string name="fluid">Fluid</string>
    <string name="other">Other</string>
    <string name="home">home</string>
    <string name="connection_error">Connection error</string>
    <string name="xml_error">Xml error</string>
    <string name="from">From</string>
    <string name="convert">Convert</string>

    <string-array name="distance">
        <item>Centimetres</item>
        <item>Metres</item>
        <item>Kilometres</item>
        <item>Inches</item>
        <item>Feet</item>
        <item>Miles</item>
    </string-array>

    <string-array name="currencies">
        <item>US Dollar</item>
        <item>Euro</item>
        <item>UK Pound Sterling</item>
        <item>Australian Dollar</item>
        <item>Canadian Dollar</item>
        <item>Japanese Yen</item>
        <item>Swiss Franc</item>
        <item>Comoro Franc</item>
        <item>Afghan Afghani</item>
        <item>Albanian Lek</item>
        <item>Algerian Dinar</item>
        <item>Angolan Kwanza</item>
        <item>Argentine Peso</item>
        <item>Armenia Dram</item>
        <item>Aruban Florin</item>
        <item>Azerbaijan Manat</item>
        <item>Bahamian Dollar</item>
        <item>Bahrain Dinar</item>
        <item>Bangladeshi Taka</item>
        <item>Barbadian Dollar</item>
        <item>Belarussian Ruble</item>
        <item>Belize Dollar</item>
        <item>Bolivian Boliviano</item>
        <item>Bosnia-Herzegovina Convertible Mark</item>
        <item>Botswana Pula</item>
        <item>Brazilian Real</item>
        <item>Brunei Dollar</item>
        <item>Bulgarian Lev</item>
        <item>Burundian Franc</item>
        <item>Cambodian Riel</item>
        <item>Cape Verde Escudo</item>
        <item>Central African CFA Franc</item>
        <item>CFP Franc</item>
        <item>Chilean Peso</item>
        <item>Chinese Yuan</item>
        <item>Colombian Peso</item>
        <item>Congolese Franc</item>
        <item>Costa Rican Colón</item>
        <item>Croatian Kuna</item>
        <item>Cuban Peso</item>
        <item>Czech Koruna</item>
        <item>Danish Krone</item>
        <item>Djiboutian Franc</item>
        <item>Dominican Peso</item>
        <item>East Caribbean Dollar</item>
        <item>Egyptian Pound</item>
        <item>Eritrean Nakfa</item>
        <item>Ethiopian Birr</item>
        <item>Fiji Dollar</item>
        <item>Gambian Dalasi</item>
        <item>Georgian Lari</item>
        <item>Ghanaian Cedi</item>
        <item>Gibraltar Pound</item>
        <item>Guatemalan Quetzal</item>
        <item>Guinean Franc</item>
        <item>Guyanese Dollar</item>
        <item>Haitian Gourde</item>
        <item>Honduran Lempira</item>
        <item>Hong Kong Dollar</item>
        <item>Hungarian Forint</item>
        <item>Icelandic Krona</item>
        <item>Indian Rupee</item>
        <item>Indonesian Rupiah</item>
        <item>Iranian Rial</item>
        <item>Iraqi Dinar</item>
        <item>Israeli New Sheqel</item>
        <item>Jamaican Dollar</item>
        <item>Jordanian Dinar</item>
        <item>Kazakhstani Tenge</item>
        <item>Kenyan Shilling</item>
        <item>Kuwaiti Dinar</item>
        <item>Kyrgyzstan Som</item>
        <item>Lao Kip</item>
        <item>Latvian Lats</item>
        <item>Lebanese Pound</item>
        <item>Lesotho Loti</item>
        <item>Liberian Dollar</item>
        <item>Libyan Dinar</item>
        <item>Lithuanian Litas</item>
        <item>Macanese Pataca</item>
        <item>Macedonian Denar</item>
        <item>Malagasy Ariary</item>
        <item>Malawian Kwacha</item>
        <item>Malaysian Ringgit</item>
        <item>Maldivian Rufiyaa</item>
        <item>Mauritanian Ouguiya</item>
        <item>Mauritian Rupee</item>
        <item>Mexican Peso</item>
        <item>Moldova Lei</item>
        <item>Mongolian Togrog</item>
        <item>Moroccan Dirham</item>
        <item>Mozambican Metical</item>
        <item>Myanma Kyat</item>
        <item>Namibian Dollar</item>
        <item>Nepalese Rupee</item>
        <item>Neth. Antillean Guilder</item>
        <item>New Taiwan Dollar</item>
        <item>New Turkmenistan Manat</item>
        <item>New Zealand Dollar</item>
        <item>Nicaraguan Córdoba</item>
        <item>Nigerian Naira</item>
        <item>Norwegian Krone</item>
        <item>Omani Rial</item>
        <item>Pakistani Rupee</item>
        <item>Panamanian Balboa</item>
        <item>Papua New Guinean Kina</item>
        <item>Paraguayan Guarani</item>
        <item>Peruvian Nuevo Sol</item>
        <item>Philippine Peso</item>
        <item>Polish Zloty</item>
        <item>Qatari Rial</item>
        <item>Romanian New Leu</item>
        <item>Russian Rouble</item>
        <item>Rwandan Franc</item>
        <item>Salvadoran Colon</item>
        <item>Samoan Tala</item>
        <item>Sao Tome and Principe Dobra</item>
        <item>Saudi Riyal</item>
        <item>Serbian Dinar</item>
        <item>Seychelles Rupee</item>
        <item>Sierra Leonean Leonean</item>
        <item>Singapore Dollar</item>
        <item>Soloman Islands Dollar</item>
        <item>Somali Shilling</item>
        <item>South African Rand</item>
        <item>South Korean Won</item>
        <item>South Sudanese Pound</item>
        <item>Sri Lanka Rupee</item>
        <item>Sudanese Pound</item>
        <item>Surinamese Dollar</item>
        <item>Swazi Lilangeni</item>
        <item>Swedish Krona</item>
        <item>Syrian Pound</item>
        <item>Tajikistan Ruble</item>
        <item>Tanzanian Shilling</item>
        <item>Thai Baht</item>
        <item>Tongan Pa\'anga</item>
        <item>Trinidad Tobago Dollar</item>
        <item>Tunisian Dinar</item>
        <item>Turkish Lira</item>
        <item>UAE Dirham</item>
        <item>Ugandan Shilling</item>
        <item>Ukrainian Hryvnia</item>
        <item>Uruguayan Peso</item>
        <item>Uzbekistan Sum</item>
        <item>Vanuatu Vatu</item>
        <item>Venezuelan Bolivar</item>
        <item>Vietnamese Dong</item>
        <item>West African CFA Franc</item>
        <item>Yemeni Rial</item>
        <item>Zambian Kwacha</item>
    </string-array>

    <string-array name="area">
        <item>Square kilometre</item>
        <item>Square metre</item>
        <item>Square mile</item>
        <item>Square yard</item>
        <item>Square foot</item>
        <item>Square inch</item>
        <item>Hectare</item>
        <item>Acre</item>
    </string-array>

    <string-array name="volume">
        <item>Cubic metre</item>
        <item>Cubic foot</item>
        <item>Cubic inch</item>
        <item>Litre</item>
        <item>Millilitre</item>
        <item>US liquid gallon</item>
        <item>US liquid quart</item>
        <item>US liquid pint</item>
        <item>US legal cup</item>
        <item>US fluid ounce</item>
        <item>US tablespoon</item>
        <item>US teaspoon</item>
        <item>Imperial gallon</item>
        <item>Imperial quart</item>
        <item>Imperial pint</item>
        <item>Imperial cup</item>
        <item>Imperial fluid ounce</item>
        <item>Imperial tablespoon</item>
        <item>Imperial teaspoon</item>
    </string-array>

    <string-array name="temperature">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>

    <string-array name="time">
        <item>Second</item>
        <item>Minute</item>
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string-array name="speed">
        <item>Miles per hour</item>
        <item>Kilometre per hour</item>
        <item>Metre per second</item>
        <item>Foot per second</item>
        <item>Knot</item>
    </string-array>

    <string-array name="pressure">
        <item>Atmosphere</item>
        <item>Bar</item>
        <item>Pascal</item>
        <item>Pound-force per square inch</item>
        <item>Torr</item>
    </string-array>

    <string-array name="mass">
        <item>Microgram</item>
        <item>Milligram</item>
        <item>Gram</item>
        <item>Kilogram</item>
        <item>Tonne</item>
        <item>Imperial ton</item>
        <item>US ton</item>
        <item>Stone</item>
        <item>Pound</item>
        <item>Ounce</item>
    </string-array>

    <string-array name="plane_angle">
        <item>Degree</item>
        <item>Radian</item>
        <item>Milliradian</item>
        <item>Gradian</item>
        <item>Minute of arc</item>
        <item>Second of arc</item>
    </string-array>

    <string-array name="frequency">
        <item>Hertz</item>
        <item>Kilohertz</item>
        <item>Megahertz</item>
        <item>Gigahertz</item>
    </string-array>

    <string-array name="energy">
        <item>Joule</item>
        <item>Kilojoule</item>
        <item>Gram calorie</item>
        <item>Kilocalorie</item>
        <item>Watt hour</item>
        <item>Kilowatt hour</item>
        <item>Electronvolt</item>
        <item>British thermal unit</item>
        <item>US therm</item>
        <item>Foot-pound</item>
    </string-array>

    <string-array name="fuel">
        <item>US Miles per gallon</item>
        <item>Miles per gallon (Imperial)</item>
        <item>Kilometre per litre</item>
        <item>Litre per 100 kilometres</item>
    </string-array>

    <string-array name="digital_storage">
        <item>Bit</item>
        <item>Kilobit</item>
        <item>Megabit</item>
        <item>Gigabit</item>
        <item>Terabit</item>
        <item>Petabit</item>
        <item>Byte</item>
        <item>Kilobyte</item>
        <item>Megabyte</item>
        <item>Gigabyte</item>
        <item>Terabyte</item>
        <item>Petabyte</item>
    </string-array>

    <string-array name="data_transfer_rate">
        <item>Bit per second</item>
        <item>Kilobit per second</item>
        <item>Kilobyte per second</item>
        <item>Megabit per second</item>
        <item>Megabyte per second</item>
        <item>Gigabit per second</item>
        <item>Gigabyte per second</item>
        <item>Terabit per second</item>
        <item>Terabyte per second</item>
    </string-array>

</resources>
