<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMain">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/csTop"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/colorDBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/tvToolkit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:text="@string/toolkit"
                android:textColor="@color/colorWhite"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvConversion"
                app:layout_constraintTop_toBottomOf="@+id/tvConversion"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvConversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="georgia"
                android:text="@string/conversion"
                android:textColor="@color/colorWhite"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvToolkit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvConversion"
                app:layout_constraintTop_toTopOf="@+id/tvConversion"
                app:srcCompat="@drawable/baseline_ac_unit_white_48dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/csTop"
            app:layout_constraintVertical_bias="1.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvTemperatureFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="23dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/from"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTemperatureTo"
                    android:layout_width="wrap_content"
                    android:layout_height="23dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/to"
                    app:layout_constraintBottom_toTopOf="@+id/spTemperatureTo"
                    app:layout_constraintStart_toStartOf="@+id/spTemperatureTo" />

                <Spinner
                    android:id="@+id/spTemperatureFrom"
                    android:layout_width="172dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@+id/tvTemperatureFrom"
                    app:layout_constraintTop_toBottomOf="@+id/tvTemperatureFrom" />

                <Spinner
                    android:id="@+id/spTemperatureTo"
                    android:layout_width="172dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/spTemperatureFrom"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/spTemperatureFrom"
                    app:layout_constraintTop_toTopOf="@+id/spTemperatureFrom" />

                <EditText
                    android:id="@+id/etTemperatureInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:inputType="numberDecimal|numberSigned"
                    app:layout_constraintStart_toStartOf="@+id/spTemperatureFrom"
                    app:layout_constraintTop_toBottomOf="@+id/spTemperatureFrom" />

                <Button
                    android:id="@+id/btnTemperatureConvert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/convert"
                    app:layout_constraintBaseline_toBaselineOf="@+id/etTemperatureInput"
                    app:layout_constraintStart_toEndOf="@+id/etTemperatureInput" />

                <TextView
                    android:id="@+id/tvTemperatureInputSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etTemperatureInput"
                    tools:text="input summary" />

                <TextView
                    android:id="@+id/tvTemperatureOutput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="36sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTemperatureInputSummary"
                    tools:text="@string/output" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/navigation_drawer_header" />

</androidx.drawerlayout.widget.DrawerLayout>